# localization

./: .gitignore  CMakeLists.txt  EveLocalization.ccpproj  EveLocalization.vcxproj  EveLocalization.vcxproj.filters  EveLocalization_v141.vcxproj  README.md  RegenerateProjectFile.cmd  WrapPointList.cpp  WrapPointList.h  WrapPointList_Blue.cpp  autoversion.h  autoversion.manifest  collator.cpp  collator.h  collator.mm  collator_blue.cpp  formatters.cpp  formatters.h  localization.cpp  localization.h  localization_blue.cpp  parser.cpp  parser.h  parser_blue.cpp  resource.h  stdafx.cpp  stdafx.h  vcpkg-configuration.json  vcpkg.json  version.h
.teamcity/: pom.xml
.teamcity/MacOS/: Project.kt
.teamcity/Windows/: Project.kt
.teamcity/_Self.kt/: Project.kt
.teamcity/_Self.kt/buildTypes/: PublishToPerforce.kt
cmake/triplets/: arm64-osx-debug.cmake  universal-osx-debug.cmake
python/eveLocalization/: __init__.py
python/eveLocalization/tests/: benchmark.py  test_eveLocalization.py
